<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pokemon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.pokemon.ui.dashboard.DashboardFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.pokemon.ui.notifications.NotificationsFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_register"
            app:destination="@id/navigation_register" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.pokemon.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_navigation_register_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.pokemon.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>